apps/personal-site/overlays/homelander/patches/deployment-resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: personal-site
spec:
  template:
    spec:
      containers:
        - name: web
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
