apps/personal-site/overlays/homelander/patches/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-site
  namespace: personal-site
spec:
  tls:
    - hosts: [hi.quybits.com]
      secretName: hi-quybits-com-tls
  rules:
    - host: hi.quybits.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-site
                port:
                  number: 80
